<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.smartcitylink.urgellet.activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reciclar_be"
                android:layout_gravity="center_horizontal"
                style="@style/NormalTextView"
                android:textStyle="bold"
                android:textSize="19sp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:id="@+id/benvingut"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posa_codi"
                android:layout_gravity="center_horizontal"
                style="@style/NormalTextView"
                android:id="@+id/textView"
                android:paddingEnd="30dp"
                android:layout_marginBottom="10sp"
                android:paddingStart="30dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/waitingLoader"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/codiEditTextLayout">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/codiEditText"
                    android:layout_marginBottom="20dp"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:imeActionLabel="@string/enviar"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/UrgelletButton"
                    android:text="@string/enviar"
                    android:id="@+id/enviarButton"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countDown"
                android:textSize="40sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:text="00:00"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:text="@string/reenviar"
                android:id="@+id/reEnviarButton"
                android:enabled="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:textColor="@color/grayMedium"/>


        </LinearLayout>


            <Button
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/NormalTextView"
                android:textAllCaps="false"
                android:id="@+id/changeModoText"
                android:text="@string/posa_codi_short"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:background="@android:color/transparent"
                />
        </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueAlpha"
        android:id="@+id/loader"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>
