<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartcitylink.urgellet.fragments.SalariFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:visibility="gone"
        android:id="@+id/salariBuit">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salari_buit"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:id="@+id/linearLayout2"
        android:visibility="gone">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_inicial"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100€"
            android:textSize="40sp"
            android:id="@+id/saldoInicial"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"/>
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        >
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descompte_contenidors"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/screenTitle"
            />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100€"
            android:textSize="40sp"
            android:id="@+id/saldoActual"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/desc_fecha"
            android:text="" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/salariList"
        android:layout_weight="1"/>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/salariList">
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Descarga factura"-->
            <!--android:id="@+id/rebutButton"-->
            <!--style="@style/UrgelletButton"-->
        <!--/>-->
        <!---->
        <!---->

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/rebutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/UrgelletButton"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/blackDark"
                android:textSize="15sp"
                android:text="@string/download_factura" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/ic_recibo" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
