<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:background="@color/colorPrimary"
    tools:context="com.smartcitylink.urgellet.fragments.CameraOverlayFragment"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalTextView"
                android:textColor="@color/white"
                android:layout_marginBottom="15sp"
                android:textSize="20sp"
                android:text="@string/fes_foto"
                android:layout_alignParentTop="true"
                android:id="@+id/infoText"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoText"
                android:layout_above="@+id/buttonsLayout"
                android:id="@+id/surfaceContainer"
                android:layout_marginBottom="10dp">
                <com.smartcitylink.urgellet.widgets.AutoFitTextureView
                    android:id="@+id/texture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"/>
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/photo_camera"
                    android:scaleType="centerInside"
                    android:layout_alignBottom="@id/texture"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/takePhoto"
                    android:tint="@color/white"
                    />
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/flash"
                    android:scaleType="centerInside"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/white"
                    android:background="@android:color/transparent"
                    android:id="@+id/showFlash"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:id="@+id/buttonsLayout"
                android:visibility="invisible">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/UrgelletButton"
                    android:text="@string/torna_fer_foto"
                    android:id="@+id/fotoRetry"
                    android:layout_marginBottom="10dp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/UrgelletButton"
                    android:text="@string/envia_foto"
                    android:id="@+id/sendFoto"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <include android:id="@+id/loader"
        layout="@layout/loader_view"
        android:visibility="gone"/>
</RelativeLayout>
